# STRATUM

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CLAUDE.md.template  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  foundry.toml  package-lock.json  remappings.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
brevis/: Cargo.toml  README.md
brevis-circuits/: circuit_il_attribution.go  go.mod  go.sum
brevis-circuits/cmd/receipt/: main.go
brevis-circuits/cmd/rprobe/: main.go
brevis/src/: aggregate_reserve.rs  circuit_io.rs  il_attribution.rs  lib.rs  tick_math.rs  tw_contribution.rs  u256.rs
docs/: AIDLC.md  ARCHITECTURE.md  CODEBASE_GRAPH.md  DEPLOYMENT.md  JUDGE_GUIDE.md  LIVE_SYSTEM.md  PLAN.md  PROPOSAL.md  README.md  REQUIREMENTS.md  TECHNICAL_DESIGN.md
docs/diagrams/: README.md
docs/diagrams/drawio/: coverage-epoch.drawio  coverage-ratio.drawio  cross-chain-topology.drawio  fee-waterfall.drawio  il-absorption.drawio  reactive-flow.drawio  settlement-decision.drawio  stratum-architecture.drawio  stratum-hook-internals.drawio  stratum-system.drawio  tranche-lifecycle.drawio  tranche-waterfall.drawio
docs/diagrams/mermaid/: coverage-ratio.mmd  data-model.mmd  deploy-testnet.mmd  deposit-flow.mmd  epoch-lifecycle.mmd  fee-waterfall.mmd  hook-lifecycle.mmd  invariants.mmd  reactive-flow.mmd  repo-map.mmd  settlement-flow.mmd  system-layers.mmd  tranche-economics.mmd  waterfall-split.mmd
files/: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  PRD.md  README.md  SKILL.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Dashboard.tsx  DepositPage.tsx  LabsPage.tsx  Landing.tsx  PositionsPage.tsx  main.tsx  styles.css
frontend/src/abis/: aggregatorV3.ts  cphr.ts  demoToken.ts  erc20.ts  matchAttestation.ts  permit2.ts  stratumEvents.ts  stratumHook.ts  stratumLens.ts  stratumZap.ts  stylusEngine.ts  stylusShim.ts
frontend/src/components/: ArchitectureMap.tsx  BalancesStrip.tsx  CoverageSimulator.tsx  DemoFaucet.tsx  DepositPanel.tsx  DepositSuccessBanner.tsx  EpochCountdown.tsx  HistoryPanel.tsx  IntegrationStatusStrip.tsx  JudgeQuickStartPanel.tsx  LiveEventFeed.tsx  LogoMark.tsx  PageNav.tsx  PoolCharts.tsx  PoolInspectPanel.tsx  PositionsPanel.tsx
frontend/src/config/: addresses.ts  explorers.ts  integrationEvidence.ts
frontend/src/graphql/: queries.ts
frontend/src/hooks/: useEpochProgress.ts  useGasEstimate.ts  useMetricDelta.ts  useOnchainHistory.ts  usePoolOverview.ts  useStylusForecast.ts  useSubgraphEpochs.ts  useSubgraphPoolHistory.ts  (+3 more)
operator/: Cargo.toml  README.md
operator/src/: abi.rs  attestation.rs  lib.rs  lvr_auction.rs  main.rs
script/: CanonicalAddresses.sol  DemoLifecycle.s.sol  DeployReactive.s.sol  DeployStratum.s.sol  EnvConfig.sol  InitSepoliaWethPool.s.sol  InitStratumPool.s.sol  WireCrossChain.s.sol  env-setup.sh  verify.sh
script/tokens/: DemoToken.sol
scripts/: build_diagrams.py  check-secrets.sh  drawio_gen.py  render-diagrams.sh
security/: README.example
src/: StratumErrors.sol  StratumHook.sol  StratumTypes.sol  TrancheToken.sol
src/base/: StratumBaseHook.sol
src/interfaces/: IPeripheral.sol  IStratumHook.sol
src/libraries/: CoverageRatio.sol  EpochAccounting.sol  ILMath.sol  PoolInitLib.sol  ReserveMath.sol  StratumRateLibrary.sol  TrancheSettlementLib.sol  Waterfall.sol
src/peripherals/: README.md
stylus/: Cargo.toml  README.md
stylus/src/: lib.rs  main.rs  matching.rs  ml_volatility.rs  stylus_entrypoint.rs
subgraph/: README.md  networks.json  package-lock.json  package.json  publish.sh  schema.graphql  subgraph.yaml
subgraph/abis/: StratumHook.json  TrancheIntentRegistry.json
subgraph/src/: intents.ts  stratum.ts
test/fork/: UnichainSepolia.t.sol
test/integration/: Brevis.t.sol  CPHR.t.sol  CoverageDefender.t.sol  EigenLayer.t.sol  Enhancements.t.sol  LVRRealHook.t.sol  Migration.t.sol  Peripheral.t.sol  ProtocolFeeRealization.t.sol  RouterCompat.t.sol  StratumHook.t.sol  TrancheIntent.t.sol  Wiring.t.sol  ZapPermit2.t.sol
test/invariant/: StratumInvariants.t.sol
test/scenario/: Stress.t.sol
test/unit/: CanonicalAddresses.t.sol  CoverageRatio.t.sol  EpochAccounting.t.sol  ILMath.t.sol  LVRProceedsValidator.t.sol  ReserveMath.t.sol  Waterfall.t.sol
test/utils/: HookMiner.sol  StratumFlags.sol
(+43 files in other folders)
